--- a/Risk_Management_Services.html
+++ b/Risk_Management_Services.html
@@ -133,8 +133,12 @@
     <a class="nav-link" href="about.html">About Us</a>
     <span class="navhover"></span>
   </li>
-  <li class="nav-item">
+   <li class="nav-item">
     <a class="nav-link" href="portfolio.html">Portfolio</a>
+    <span class="navhover"></span>
+  </li>
+   <li class="nav-item">
+    <a class="nav-link" href="partner.html">Partner</a>
     <span class="navhover"></span>
   </li>
   <li class="nav-item">
@@ -246,8 +250,12 @@
     <a class="nav-link" href="about.html" aria-expanded="false">About Us</a>
     <span class="navhover"></span>
   </li>
-  <li class="nav-item">
+   <li class="nav-item">
     <a class="nav-link" href="portfolio.html">Portfolio</a>
+    <span class="navhover"></span>
+  </li>
+   <li class="nav-item">
+    <a class="nav-link" href="partner.html">Partner</a>
     <span class="navhover"></span>
   </li>
   <li class="nav-item">
