--- a/grc_services.html
+++ b/grc_services.html
@@ -124,8 +124,12 @@
     <a class="nav-link" href="about.html">About Us</a>
     <span class="navhover"></span>
   </li>
-  <li class="nav-item">
+   <li class="nav-item">
     <a class="nav-link" href="portfolio.html">Portfolio</a>
+    <span class="navhover"></span>
+  </li>
+   <li class="nav-item">
+    <a class="nav-link" href="partner.html">Partner</a>
     <span class="navhover"></span>
   </li>
   <li class="nav-item">
@@ -237,8 +241,12 @@
     <a class="nav-link" href="about.html" aria-expanded="false">About Us</a>
     <span class="navhover"></span>
   </li>
-  <li class="nav-item">
+   <li class="nav-item">
     <a class="nav-link" href="portfolio.html">Portfolio</a>
+    <span class="navhover"></span>
+  </li>
+   <li class="nav-item">
+    <a class="nav-link" href="partner.html">Partner</a>
     <span class="navhover"></span>
   </li>
   <li class="nav-item">
